--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
                     <!-- Page 6 (Contact Me) -->
                     <div class="page-back">
-                        <h1 class="titel">Content Me!</h1>
+                        <h1 class="titel">ContactMe!</h1>
 
                         <div class="content-box">
                             <form action="#" id="messageForm">
